[tool.poetry]
name = "personal-finance-dashboard-1"
version = "0.1.0"
description = ""
authors = ["Dylan Miller <103227705+jibbajab@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "personal_finance_dashboard_1"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
replit = "^3.2.5"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
