[tool.poetry]
name = "personal-finance-dashboard"
version = "0.1.0"
description = ""
authors = ["millerdylan87 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
Flask = "^2.2.3"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
